k8s/apps/code-server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  namespace: code-server
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
        - name: code-server
          image: codercom/code-server:4.115.0
          command: ["/bin/sh", "-c"]
          args:
            - |
              [...]
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 2Gi
          volumeMounts:
            - name: data
              mountPath: /home/coder
            - name: lathibandolaise-code
              mountPath: /home/coder/lathibandolaise
          startupProbe:
            httpGet:
              path: /healthz
              port: 8080
            failureThreshold: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: code-server-data
        - name: lathibandolaise-code
          hostPath:
            path: /data/lathibandolaise
            type: DirectoryOrCreate
        - name: git-secret
          projected:
            defaultMode: 0400
            sources:
              - secret:
                  name: code-server-git-secret
