k8s/apps/code-server/oauth2-proxy-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: code-server-oauth2-proxy-service
  namespace: code-server
spec:
  selector:
    app: code-server-oauth2-proxy
  ports:
    - protocol: TCP
      port: 4180
      targetPort: 4180
