k8s/apps/code-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: code-server-service
  namespace: code-server
spec:
  selector:
    app: code-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
