k8s/apps/code-server/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: code-server-ingress
  namespace: code-server
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dev.armleth.fr`)
      kind: Rule
      services:
        - name: code-server-service
          port: 8080
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
  tls:
    secretName: code-server-tls-secret
